# ayed

./: 1a.c  CMakeLists.txt
charset/: charset.c  charset.h  charset_lib2.c  charset_lib2.h  main.c  string_lib.c  string_lib.h
examenes/final-agosto-2024/: ejercicio1.c  ejercicio2.c
examenes/final-agosto-2024/lib/: graph.c  graph.h  queue_dynamic.c  queue_dynamic.h  vector.c  vector.h
examenes/final-marzo-2023/: ejercicio1.c  ejercicio2.c
examenes/final-marzo-2023/lib/: graph.h
examenes/parcial-1-2024-guia/: ejercicio1.c  ejercicio2.c
examenes/parcial-1-2024-guia/lib/: fraction.c  fraction.h  stack.h  stack_dynamic.c
examenes/parcial-2-2024/: ejercicio1.c  ejercicio2.c  ejercicio3.c
examenes/parcial-2-2024/lib/: graph.h  vector.h
examenes/recuperatorio-2-2022/: ejercicio1.c  ejercicio2.c  ejercicio3.c
examenes/recuperatorio-2-2022/lib/: graph.h  queue_dynamic_ntn.c  queue_dynamic_ntn.h
examenes/recuperatorio-2-2024/: ejercicio1.c  ejercicio2.c
examenes/recuperatorio-2-2024/lib/: vector.c  vector.h
fraction/: fraction.c  fraction.h
tda/charset/: string_lib.c
tda/fraction/: fraction.c  fraction.h
tda/matrix/: matrix.c
tda/stack/: stack.c
tda/vector/: vector.c  vector.h
tests/: arrays.c  intersectar_strings.c  recursividad.c  recursividad_2.c
tp2/: matrix_test.c  vector_int.c
tp2/vector_frac/: vector.c  vector.h  vector_frac.c
tp3/: recursivity.c
tp3/vector_float/: vector.h
tp4/: ssl.c
tp5/: bt.c  btree_base.c  btree_base_test.c  sbt.c  trees.c
vector/: vector.c
